# engish

./: Cargo.toml  README.md  build.rs
assets/: english_letter_groups.ron  english_letters.ron  letters.ron  raw_bogram_table.html
examples/: dictionary_sampling.rs  simple_noun.rs
src/: digraphs.ron  lib.rs  ngrams.rs
src/builders/: letter_sampler.rs  mod.rs  noun_builder_v1.rs  propper_noun_builder.rs
src/language/: adjective.rs  any_word.rs  dictionary.rs  language.rs  language_model.rs  letter.rs  letter_group.rs  letter_sampler.rs  mod.rs  noun.rs  verb.rs  word.rs
src/util/: determiners.rs  letter_sampler.rs  mod.rs
src/words/: mod.rs  noun_builder_v1.rs  propper_nouns.rs
