[package]
name = "engish"
version = "0.1.0"
edition = "2021"
keywords = ["language", "words", "english"]
categories = ["text-processing"]
authors = ["Fishy"]
readme = "README.md"
repository = "https://github.com/fishykins/engish/"
license = "MIT OR Apache-2.0"

[features]
default = ["words", "nouns"]
words = []
nouns = []

[dependencies]
ron = "0.8"
rand = { version ="0.8", features = ["serde1"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
ron = "0.8"
rand = { version ="0.8", features = ["serde1"] }
serde = { version = "1", features = ["derive"] }