[package]
name = "engish"
version = "0.2.0"
edition = "2021"
description = "A language utility for sampling letters and building words."
keywords = ["language", "words", "english"]
categories = ["text-processing"]
authors = ["Fishy"]
readme = "README.md"
repository = "https://github.com/fishykins/engish/"
license = "MIT OR Apache-2.0"

[features]
default = ["builders"]
builders = []

[dependencies]
ron = "0.11"
rand = { version ="0.9.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
ron = "0.11"
rand = { version ="0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }